--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "test": "karma start ClientApp/test/karma.conf.js",
-    "webpack": "webpack --config webpack.config.vendor.js && webpack"
+    "test": "karma start ClientApp/test/karma.conf.js"
   },
   "dependencies": {
     "@angular/animations": "4.2.5",
