--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "test": "karma start ClientApp/test/karma.conf.js"
+    "test": "karma start ClientApp/test/karma.conf.js",
+    "webpack": "webpack --config webpack.config.vendor.js && webpack"
   },
   "dependencies": {
     "@angular/animations": "4.2.5",
@@ -19,11 +20,12 @@
     "@angular/router": "4.2.5",
     "@ngtools/webpack": "1.5.0",
     "@types/webpack-env": "1.13.0",
+    "angular-2-local-storage": "^1.0.1",
     "angular2-template-loader": "0.6.2",
     "aspnet-prerendering": "^3.0.1",
     "aspnet-webpack": "^2.0.1",
     "awesome-typescript-loader": "3.2.1",
-    "bootstrap": "3.3.7",
+    "bootstrap": "^3.3.7",
     "css": "2.2.1",
     "css-loader": "0.28.4",
     "es6-shim": "0.35.3",
@@ -33,8 +35,10 @@
     "file-loader": "0.11.2",
     "html-loader": "0.4.5",
     "isomorphic-fetch": "2.2.1",
-    "jquery": "3.2.1",
+    "jquery": "^3.2.1",
     "json-loader": "0.5.4",
+    "ngx-bootstrap": "^1.9.3",
+    "popper.js": "^1.12.5",
     "preboot": "4.5.2",
     "raw-loader": "0.5.1",
     "reflect-metadata": "0.1.10",
@@ -51,6 +55,7 @@
   "devDependencies": {
     "@types/chai": "4.0.1",
     "@types/jasmine": "2.5.53",
+    "@types/jquery": "^3.2.13",
     "chai": "4.0.2",
     "jasmine-core": "2.6.4",
     "karma": "1.7.0",
