--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@angular/platform-browser-dynamic": "4.2.5",
     "@angular/platform-server": "4.2.5",
     "@angular/router": "4.2.5",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
     "@ngtools/webpack": "1.5.0",
     "@types/webpack-env": "1.13.0",
     "angular-2-local-storage": "^1.0.1",
@@ -38,7 +37,7 @@
     "isomorphic-fetch": "2.2.1",
     "jquery": "^3.2.1",
     "json-loader": "0.5.4",
-    "ng-bootstrap": "^1.6.3",
+    "ngx-bootstrap": "^1.9.3",
     "popper.js": "^1.12.5",
     "preboot": "4.5.2",
     "raw-loader": "0.5.1",
